--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less-loader": "^4.0.4",
     "moment": "^2.18.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^2.6.1"
   }
 }
