--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
+    "html-withimg-loader": "^0.1.16",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.6.1"
