--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --inline --content-base build",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --inline --watch --content-base build",
     "dist": "webpack --progress --profile --colors --config webpack.production.config.js"
   },
   "repository": {
@@ -27,14 +27,17 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
-    "html-withimg-loader": "^0.1.16",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "open-browser-webpack-plugin": "^0.0.5",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.5.0",
+    "webpack-merge": "^4.1.0"
   }
 }
