--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --inline --watch --content-base build",
+    "dev": "webpack-dev-server --devtool cheap-module-source-map --progress --colors --hot --inline --watch --content-base build",
     "dist": "webpack --progress --profile --colors --config webpack.production.config.js"
   },
   "repository": {
