--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.24.1",
     "brace-expansion": "^1.1.8",
     "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
     "echarts": "^3.6.2",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
