--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "dev": "webpack-dev-server --devtool cheap-module-source-map --progress --colors --hot --inline --watch --content-base build",
-    "dist": "webpack --progress --profile --colors --config webpack.production.config.js"
+    "dist": "webpack --progress --profile --colors --config webpack.pro.config.js"
   },
   "repository": {
     "type": "git",
